Removed uneeded paramters from DMD constructor

--- a/mc/www/index.html
+++ b/mc/www/index.html
@@ -9,7 +9,7 @@
     <body>
         <div style="font-family:Superfly;color:transparent">Superfly preload hack</div>
         <div style="font-family:Dusty;color:transparent">Dusty preload hack</div>
-        <canvas id="dmd"></canvas>
+        <canvas id="dmd" width="1280" height="390"></canvas>
         <!--<canvas id="test" style="position:absolute;top: 0; left:1281px" width=256 height=78></canvas>-->
         <!--<input id="slider" type="range" min="0" max=255 value=255 style="position:absolute; top: 395px; left:0" />-->
     </body>
