Switched to SSH + webgpu refacto for Chromium 104

--- a/mc/www/index.html
+++ b/mc/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html>
     <head>
+        <meta httpEquiv="origin-trial" content="AjNpdftozdUpVz5iWIGc6sUV6LVjc2h2S+UlNAfJaLeyDzpwBtKD7m65w2mdQmNcuibcd7xU19+kVZREek6QvwEAAABieyJvcmlnaW4iOiJodHRwczovL2FyY2hwaW5iYWxsLmRldjo0NDMiLCJmZWF0dXJlIjoiV2ViR1BVIiwiZXhwaXJ5IjoxNjYzNzE4Mzk5LCJpc1N1YmRvbWFpbiI6dHJ1ZX0=" />
         <title>Media Controller DMD</title>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <script src="js/ext/pubsub.js"></script>
