--- a/mc/www/preload.html
+++ b/mc/www/preload.html
@@ -27,7 +27,7 @@
 		</style>
         <script>
 			setTimeout(function(){ 
-				window.location = `http://${location.hostname}:${location.port}/index.html`;
+				window.location = `https://${location.hostname}:${location.port}/index.html`;
 			}, 500);
 		</script> 
     </head>
